--- a/webapp/Jenkinsfile
+++ b/webapp/Jenkinsfile
@@ -7,6 +7,8 @@ pipeline {
 
   environment {
     ARTIFACT_ID = "0graterol/webapp:${env.BUILD_NUMBER}"
+    SERVER_IP = '192.168.1.33'
+    SERVER_USER = 'ograterol'
   }
 
   stages {
@@ -44,6 +46,33 @@ pipeline {
     //     build job: 'deploy-webapp-staging', parameters: [string(name: 'ARTIFACT_ID', value: "${env.ARTIFACT_ID}")], wait: false
     //   }
     // }
+
+    stage('Deploy') {
+        when {
+            expression {
+                return currentBuild.result == null || currentBuild.result == 'SUCCESS'
+            }
+        }
+        steps {
+            script {
+                // Deploy to the Linux server
+                sshagent(credentials: ['SSH_LOCAL_LAB']) {
+                    sh """
+                    ssh ${SERVER_USER}@${SERVER_IP} '
+                    cd /home/ograterol/projects/jenkins-script-master/webapp &&
+                    git pull origin master &&
+                    docker stop webapp &&
+                    docker build -t 0graterol/webapp:${env.ARTIFACT_ID} . &&
+                    docker run --name webapp -d -p 3000:3000 0graterol/webapp:${env.ARTIFACT_ID}
+                    '
+                    """
+                }
+            }
+        }
+    }
+    }
+
+
   }
 }
 
